@@ -1,18 +1,23 @@
 package org.example.endpoint;
 
-import jakarta.persistence.OptimisticLockException;
-import org.example.dto.request.order.*;
+import org.example.dto.request.order.DeleteOrderRequest;
+import org.example.dto.request.order.SaveListOrderRequest;
+import org.example.dto.request.order.SearchOrderRequest;
+import org.example.dto.request.report.ReportCustomerZeroOrderRequest;
+import org.example.dto.request.report.ReportProductBestSellerRequest;
+import org.example.dto.request.report.ReportProductZeroOrderRequest;
 import org.example.dto.response.ErrorTypeResponse;
 import org.example.dto.response.StatusResponse;
-import org.example.dto.response.order.CreateOrderResponse;
+import org.example.dto.response.customer.CustomerResponseList;
+import org.example.dto.response.customer.CustomerResponseType;
+import org.example.dto.response.order.ListSaveOrderResponse;
 import org.example.dto.response.order.OrderResponseList;
 import org.example.dto.response.order.OrderResponseType;
-import org.example.dto.response.order.UpdateOrderResponse;
+import org.example.dto.response.order.SaveOrderResponse;
+import org.example.dto.response.report.ProductReportResponse;
+import org.example.dto.response.report.ProductsReportResponse;
 import org.example.entity.AccountEntity;
-import org.example.entity.OrderEntity;
-import org.example.model.CreateOrderValidateDTO;
-import org.example.model.UpdateOrderDTO;
-import org.example.model.UpdateOrderValidateDTO;
+import org.example.model.ListSaveOrderDTO;
 import org.example.security.UserDetailImpl;
 import org.example.service.AccountService;
 import org.example.service.OrderService;
@@ -26,10 +31,12 @@ import org.springframework.ws.server.endpoint.annotation.PayloadRoot;
 import org.springframework.ws.server.endpoint.annotation.RequestPayload;
 import org.springframework.ws.server.endpoint.annotation.ResponsePayload;
 
+import java.math.BigDecimal;
+import java.sql.Timestamp;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Endpoint
 public class OrderEndpoint {
@@ -44,35 +51,31 @@ public class OrderEndpoint {
     private OrderValidate validate;
     private final DateTimeFormatter formatter = DateTimeFormatter.ofPattern("HH:mm:ss dd-MM-yyyy ");
 
-    @PayloadRoot(namespace = NAMESPACE_URI, localPart = "createOrderRequest")
+    @PayloadRoot(namespace = NAMESPACE_URI, localPart = "saveListOrderRequest")
     @ResponsePayload
     @Secured({ADMIN,STAFF})
-    public CreateOrderResponse createOrder(@RequestPayload CreateOrderRequest request) {
-        CreateOrderResponse response = new CreateOrderResponse();
+    public ListSaveOrderResponse saveOrder(@RequestPayload SaveListOrderRequest request) {
+        ListSaveOrderResponse response = new ListSaveOrderResponse();
+        UserDetailImpl userDetail = (UserDetailImpl) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+        AccountEntity account = accountService.findById(userDetail.getAccountId()).orElse(null);
 
         try {
             // Thực hiện validation
-            CreateOrderValidateDTO dto = validate.validateCreateOrder(request);
+            ListSaveOrderDTO dto = validate.validateSaveOrder(request, account);
 
-//             Nếu có lỗi validation
-            if (dto.getErrors().hasErrors()) {
-                List<ErrorTypeResponse> errorListResponse =
-                        dto.getErrors().getFieldErrors().stream().map(er ->{
-                            ErrorTypeResponse errorTypeResponse = new ErrorTypeResponse();
-                            errorTypeResponse.setErrorMessage(er.getDefaultMessage());
-                            return errorTypeResponse;
-                        }).collect(Collectors.toList());
-                response.setErrorTypes(errorListResponse);
+            if(!dto.getListOrder().isEmpty()){
+                List<SaveOrderResponse> list =
+                dto.getListOrder().stream().map(er ->{
+                    SaveOrderResponse saveOrderResponse = new SaveOrderResponse();
+                    saveOrderResponse.setOrdinalNumber("Đơn hàng thứ "+ er.getOrdinalNumber());
+                    saveOrderResponse.setErrors(er.getErrorTypes());
+                    return saveOrderResponse;
+                }).toList();
+                response.setSaveOrderResponses(list);
                 throw new Exception("Có lỗi validate!");
             }
 
-            OrderEntity order = orderService.createOrder(dto.getCustomer(),dto.getProduct(),request.getQuantity());
-
-            UserDetailImpl userDetail = (UserDetailImpl) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
-            AccountEntity account = accountService.findById(userDetail.getAccountId()).orElse(null);
-            OrderResponseType orderResponseType = convertOrderToResponse(order,account.getRole().getRoleName());
-
-            response.setOrderResponseType(orderResponseType);
+            orderService.saveOrder(dto.getSql());
 
             response.setStatus("Tạo đơn hàng thành công!");
         } catch (Exception e) {
@@ -83,45 +86,6 @@ public class OrderEndpoint {
         return response;
     }
 
-    @PayloadRoot(namespace = NAMESPACE_URI, localPart = "loadAllOrder")
-    @ResponsePayload
-    @Secured({ADMIN, STAFF})
-    public OrderResponseList loadAllOrder(@RequestPayload GetOrdersRequest request) {
-        OrderResponseList responseList = new OrderResponseList();
-        int pageSize = Optional.ofNullable(request.getPageSize()).orElse(5);
-        int pageIndex = Optional.ofNullable(request.getPageIndex()).orElse(0);
-
-        if (pageSize < 1) {
-            throw new RuntimeException("PageSize phải từ 1 trở lên!");
-        }
-
-        UserDetailImpl userDetail = (UserDetailImpl) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
-        AccountEntity account = accountService.findById(userDetail.getAccountId()).orElse(null);
-//      Lấy tổng số sản phẩm
-        int totalRecord = orderService.totalRecordFindAll(account);
-
-//      Nếu không có sản phẩm thì thông báo
-        if(totalRecord==0){
-            throw new RuntimeException("Không tìm thấy product nào!");
-        }
-//      Nếu pageIndex vượt qua số hàng tìm được thì báo lỗi
-        if(totalRecord <= pageIndex * pageSize){
-            throw new RuntimeException("Số trang không hợp lệ!");
-        }
-
-//      Lấy danh sách record theo page index
-        List<OrderEntity> orders = orderService.findAll( account,(pageIndex * pageSize),pageSize );
-
-//      Chuyển đổi về XML
-        List<OrderResponseType> orderResponses = orders
-                .stream()
-                .map(order -> {
-                    return convertOrderToResponse(order,account.getRole().getRoleName());
-                }).toList();
-        responseList.setOrderResponses(orderResponses);
-        return responseList;
-    }
-
     @PayloadRoot(namespace = NAMESPACE_URI, localPart = "searchOrderRequest")
     @ResponsePayload
     @Secured({ADMIN, STAFF})
@@ -130,7 +94,7 @@ public class OrderEndpoint {
 
         try {
             int pageSize = Optional.ofNullable(request.getPageSize()).orElse(5);
-            int pageIndex = Optional.ofNullable(request.getPageIndex()).orElse(0);
+            int pageNumber = Optional.ofNullable(request.getPageIndex()).orElse(1);
 
             if (pageSize < 1) {
                 throw new RuntimeException("PageSize phải từ 1 trở lên!");
@@ -163,19 +127,19 @@ public class OrderEndpoint {
 //      Lấy tổng số trang
             int totalPage = (int) Math.ceil( ((double) totalRow /pageSize) );
 
-//      Nếu pageIndex vượt qua số hàng tìm được thì báo lỗi
-            if(totalRow <= pageIndex * pageSize){
+//      Nếu pageNumber vượt qua số hàng tìm được thì báo lỗi
+            if(totalRow <= (pageNumber -1) * pageSize){
                 throw new RuntimeException("Số trang không hợp lệ!");
             }
 
 //      Lấy danh sách record theo page index
-            List<OrderEntity> orders
+            List<Map<String, Object>> orders
                     = orderService.search(
                     request
                     ,account
-                    ,(pageIndex * pageSize)
+                    ,( (pageNumber-1) * pageSize)
                     ,pageSize);
-
+//
 //Chuyển đổi về XML
             List<OrderResponseType> orderResponse = orders
                     .stream()
@@ -188,81 +152,28 @@ public class OrderEndpoint {
 
         return responseList;
     }
-
-    @PayloadRoot(namespace = NAMESPACE_URI, localPart = "updateOrderRequest")
-    @ResponsePayload
-    @Secured({ADMIN, STAFF})
-    public UpdateOrderResponse updateOrder(@RequestPayload UpdateOrderRequest request) {
-        UpdateOrderResponse response = new UpdateOrderResponse();
-
-        try {
-            /// Thực hiện validation
-            UpdateOrderValidateDTO dto = validate.validateUpdateOrder(request);
-
-//             Nếu có lỗi validation
-            if (dto.getErrors().hasErrors()) {
-                List<ErrorTypeResponse> errorListResponse =
-                        dto.getErrors().getFieldErrors().stream().map(er ->{
-                            ErrorTypeResponse errorTypeResponse = new ErrorTypeResponse();
-                            errorTypeResponse.setErrorMessage(er.getDefaultMessage());
-                            return errorTypeResponse;
-                        }).collect(Collectors.toList());
-                response.setErrorTypes(errorListResponse);
-                throw new Exception("Có lỗi validate!");
-            }
-
-            UpdateOrderDTO updateOrderDTO = new UpdateOrderDTO(
-                      request.getOrderId()
-                    , dto.getProduct().getProductId()
-                    , dto.getCustomer().getCustomerId()
-                    , request.getQuantity()
-                    , request.getVersion());
-            int row = orderService.updateOrder(updateOrderDTO);
-
-            OrderEntity order = null;
-            if(row == 0){
-                throw new OptimisticLockException("Phiên bản không trùng khớp!");
-            }else {
-                order = orderService.findById(request.getOrderId());
-            }
-
-            UserDetailImpl userDetail = (UserDetailImpl) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
-            AccountEntity account = accountService.findById(userDetail.getAccountId()).orElse(null);
-
-            OrderResponseType orderResponseType = convertOrderToResponse(order,account.getRole().getRoleName());
-
-            response.setOrderResponseType(orderResponseType);
-
-            response.setStatus("Cập nhật sản phẩm thành công!");
-
-        } catch (Exception e) {
-            // Xử lý lỗi và đặt giá trị lỗi vào phản hồi
-            response.setStatus(e.getMessage());
-        }
-        return response;
-    }
-    private OrderResponseType convertOrderToResponse(OrderEntity order, String role) {
+    private OrderResponseType convertOrderToResponse(Map<String,Object> map, String role) {
         OrderResponseType response = new OrderResponseType();
-        response.setOrderId(order.getOrderId());
-        response.setOrderDateTime(order.getOrderDate().format(formatter));
-        response.setProductCode(order.getProduct().getProductCode());
-        response.setProductName(order.getProduct().getProductName());
-        response.setUnitPrice(order.getUnitPrice());
-        response.setQuantity(order.getQuantity());
-        response.setCustomerName(order.getCustomer().getCustomerName());
-        response.setCustomerPhoneNumber(order.getPhoneNumberCustomer());
-        response.setAddress(order.getAddressCustomer());
-        response.setOrderStatusName(order.getOrderStatus().getOrderStatusName());
-        if(order.getAllocationDate()!=null){
-            response.setAllocationDateTime(order.getAllocationDate().format(formatter));
+        Timestamp orderDate = (Timestamp) map.get("orderDate");
+        // Chuyển đổi các giá trị từ Map sang OrderResponseDTO
+        response.setOrderDateTime(orderDate.toLocalDateTime().format(formatter));
+        response.setProductCode((String) map.get("productCode"));
+        response.setProductName((String) map.get("productName"));
+        response.setUnitPrice((Double) map.get("unitPrice"));
+        response.setQuantity((Integer) map.get("quantity"));
+        response.setCustomerName((String) map.get("customerName"));
+        response.setCustomerPhoneNumber((String) map.get("phoneNumber"));
+        if(map.get("allocationDate") !=null) {
+            Timestamp allocation = (Timestamp) map.get("allocationDate");
+            response.setAllocationDateTime(allocation.toLocalDateTime().format(formatter));
         }
+        response.setAddress((String) map.get("address"));
+        response.setOrderStatusName((String) map.get("orderStatusName"));
         if(role.equals(ADMIN)){
-            response.setAccountName(order.getAccount().getAccountName());
-            response.setStaffFullName(order.getAccount().getFullName());
+            response.setAccountName((String) map.get("accountName"));
+            response.setStaffFullName((String) map.get("staffName"));
         }
-
-        response.setVersion(order.getVersion());
-        response.setIsDeleted(order.getIsDeleted());
+        // Trả về đối tượng OrderResponseDTO đã chuyển đổi
         return response;
     }
 
@@ -286,6 +197,195 @@ public class OrderEndpoint {
             response.setMessage("Error: " + e.getMessage());
         }
 
+        return response;
+    }
+
+    @PayloadRoot(namespace = NAMESPACE_URI, localPart = "reportCustomerZeroOrderRequest")
+    @ResponsePayload
+    @Secured({ADMIN})
+    public CustomerResponseList findCustomerWithoutOrders(@RequestPayload ReportCustomerZeroOrderRequest request) {
+        CustomerResponseList responseList = new CustomerResponseList();
+        int pageSize = Optional.ofNullable(request.getPageSize()).orElse(5);
+        int pageNumber = Optional.ofNullable(request.getPageNumber()).orElse(1);
+
+        if (pageSize < 1) {
+            throw new RuntimeException("PageSize phải từ 1 trở lên!");
+        }
+        if (pageNumber < 1) {
+            throw new RuntimeException("PageNumber phải từ 1 trở lên!");
+        }
+
+        if (request.getStartDate()==null || request.getStartDate().isEmpty()){
+            request.setStartDate("2000-01-01");
+        }
+
+        if (request.getEndDate()==null || request.getEndDate().isEmpty()){
+            request.setEndDate("3000-01-01");
+        }
+
+//      Lấy tổng số khách hàng chưa mua hàng
+        int totalRecord = orderService
+                            .totalFindCustomerZeroOrder(
+                                     request.getStartDate()
+                                    ,request.getEndDate() );
+
+//      Nếu tất cả khách hàng đều mua rồi
+        if(totalRecord==0){
+            throw new RuntimeException("Tất cả khách hàng đều đã mua sản phẩm!");
+        }
+//      Nếu pageNumber vượt qua số hàng tìm được thì báo lỗi
+        if( totalRecord <= (pageNumber-1) * pageSize ){
+            throw new RuntimeException("Số trang không hợp lệ!");
+        }
+
+//      Lấy danh sách record theo page index
+        List<Map<String,Object>> customerMap =
+                orderService.findCustomerZeroOrder(
+                                             request.getStartDate()
+                                            ,request.getEndDate()
+                                            ,((pageNumber-1) * pageSize)
+                                            ,pageSize );
+
+//      Chuyển đổi về XML
+        List<CustomerResponseType>
+                customerResponses = customerMap
+                                            .stream()
+                                            .map(this::convertCustomerToResponse)
+                                            .toList();
+        responseList.setCustomerResponses(customerResponses);
+        return responseList;
+    }
+
+    @PayloadRoot(namespace = NAMESPACE_URI, localPart = "reportProductBestSellerRequest")
+    @ResponsePayload
+    @Secured({ADMIN})
+    public ProductsReportResponse findProductBestSeller(@RequestPayload ReportProductBestSellerRequest request) {
+        ProductsReportResponse responseList = new ProductsReportResponse();
+        int pageSize = Optional.ofNullable(request.getPageSize()).orElse(5);
+        int pageNumber = Optional.ofNullable(request.getPageNumber()).orElse(1);
+
+        if (pageSize < 1) {
+            throw new RuntimeException("PageSize phải từ 1 trở lên!");
+        }
+        if (pageNumber < 1) {
+            throw new RuntimeException("PageNumber phải từ 1 trở lên!");
+        }
+
+        if (request.getStartDate()==null || request.getStartDate().isEmpty()){
+            request.setStartDate("2000-01-01");
+        }
+
+        if (request.getEndDate()==null || request.getEndDate().isEmpty()){
+            request.setEndDate("3000-01-01");
+        }
+
+//      Lấy tổng số khách hàng chưa mua hàng
+        int totalRecord = orderService
+                .totalFindProductBestSeller(
+                        request.getStartDate()
+                        ,request.getEndDate() );
+
+//      Nếu tất cả khách hàng đều mua rồi
+        if(totalRecord==0){
+            throw new RuntimeException("Không có sản phẩm nào được bán trong khoản thời gian đó!");
+        }
+//      Nếu pageNumber vượt qua số hàng tìm được thì báo lỗi
+        if( totalRecord <= (pageNumber-1) * pageSize ){
+            throw new RuntimeException("Số trang không hợp lệ!");
+        }
+
+//      Lấy danh sách record theo page index
+        List<Map<String,Object>> productMap =
+                orderService.findProductBestSeller(
+                        request.getStartDate()
+                        ,request.getEndDate()
+                        ,((pageNumber-1) * pageSize)
+                        ,pageSize );
+
+//      Chuyển đổi về XML
+        List<ProductReportResponse>
+                productResponses = productMap
+                .stream()
+                .map(this::convertProductToResponse)
+                .toList();
+        responseList.setProductsBestSeller(productResponses);
+        return responseList;
+    }
+
+    @PayloadRoot(namespace = NAMESPACE_URI, localPart = "reportProductZeroOrderRequest")
+    @ResponsePayload
+    @Secured({ADMIN})
+    public ProductsReportResponse findProductWithoutOrders(@RequestPayload ReportProductZeroOrderRequest request) {
+        ProductsReportResponse responseList = new ProductsReportResponse();
+        int pageSize = Optional.ofNullable(request.getPageSize()).orElse(5);
+        int pageNumber = Optional.ofNullable(request.getPageNumber()).orElse(1);
+
+        if (pageSize < 1) {
+            throw new RuntimeException("PageSize phải từ 1 trở lên!");
+        }
+        if (pageNumber < 1) {
+            throw new RuntimeException("PageNumber phải từ 1 trở lên!");
+        }
+
+        if (request.getStartDate()==null || request.getStartDate().isEmpty()){
+            request.setStartDate("2000-01-01");
+        }
+
+        if (request.getEndDate()==null || request.getEndDate().isEmpty()){
+            request.setEndDate("3000-01-01");
+        }
+
+//      Lấy tổng số khách hàng chưa mua hàng
+        int totalRecord = orderService
+                .totalFindProductZeroOrder(
+                        request.getStartDate()
+                        ,request.getEndDate() );
+
+//      Nếu tất cả khách hàng đều mua rồi
+        if(totalRecord==0){
+            throw new RuntimeException("Tất cả khách hàng đều đã mua sản phẩm!");
+        }
+//      Nếu pageNumber vượt qua số hàng tìm được thì báo lỗi
+        if( totalRecord <= (pageNumber-1) * pageSize ){
+            throw new RuntimeException("Số trang không hợp lệ!");
+        }
+
+//      Lấy danh sách record theo page index
+        List<Map<String,Object>> productMap =
+                orderService.findProductZeroOrder(
+                        request.getStartDate()
+                        ,request.getEndDate()
+                        ,((pageNumber-1) * pageSize)
+                        ,pageSize );
+
+//      Chuyển đổi về XML
+        List<ProductReportResponse>
+                productResponses = productMap
+                .stream()
+                .map(this::convertProductToResponse)
+                .toList();
+        responseList.setProductsBestSeller(productResponses);
+        return responseList;
+    }
+
+
+    private ProductReportResponse convertProductToResponse(Map<String, Object> map) {
+        ProductReportResponse response = new ProductReportResponse();
+        response.setProductId((Integer) map.get("product_id"));
+        response.setProductCode((String) map.get("product_code"));
+        response.setProductName((String) map.get("product_name"));
+        if(map.get("quantity") != null){
+            response.setQuantitySale(((BigDecimal) map.get("quantity")).intValue());
+        }
+        return response;
+    }
+
+    private CustomerResponseType convertCustomerToResponse(Map<String,Object> map) {
+        CustomerResponseType response = new CustomerResponseType();
+        response.setCustomerId((Integer) map.get("customer_id"));
+        response.setCustomerName((String) map.get("customer_name"));
+        response.setPhoneNumber((String) map.get("phone_number"));
+        response.setAddress((String) map.get("address"));
         return response;
     }
 }
